# WhatNotNow

./: .gitignore  CLAUDE.md  README.md  categories.py  config.py  debug_stream.py  env.example  fetcher.py  index.html  install.bat  main.py  pyproject.toml  scanner.py  setup.bat  start.bat
extension/: background.js  content.js  inject.js  manifest.json  popup.html  popup.js
static/: index.html
whatnotnow/: cli.py  dashboard.py  listener.py  streams.py
