[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "whatnotnow"
version = "0.1.0"
description = "Scrape and display Whatnot livestream data in a real-time dashboard"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "websockets>=12.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.scripts]
whatnotnow = "whatnotnow.cli:main"

[tool.ruff]
line-length = 100
